2005-11-16  Vincent Noel  <vincent.noel@gmail.com>	    

	* log_repaint.c: (selection_changed_cb),
	(logview_scroll_and_focus_path), (logview_repaint): Fix a crash
	that could be triggered by switching logs and selecting lines like
	crazy.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (selection_changed_cb), (logview_unbold_rows),
	(log_add_new_log_lines), (logview_scroll_and_focus_path):
	* logrtns.c: (log_close):
	* logrtns.h:
	* logview.c: (logview_store_visible_range), (logview_select_log),
	(logview_add_logs_from_names): Store the visible treeview range
	for each opened log, so we can scroll back the exact same position
	when switching logs.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c (log_read_dates): Don't barf on multi-lines log
	messages than don't include dates. Bug reported by John Rice

	* log_repaint.c: (logview_unbold_rows),
	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
	(log_fill_model_date, logview_scroll_and_focus_path): Finally handle correctly
        the adding of new lines to a log, be it selected or not. Don't select
	the new lines, just scroll to them.

	* logrtns.c: (log_open):
	* logrtns.h: cleanups and fixes for potential sync problems.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c (logview_show_busy_cursor): New. Only show the busy
	  cursor after a short delay.
	  (logview_create_model): Try not to make the cursor flicker.

	* logview.c (logview_destroy): Don't call gtk_main_quit if we're not
	  in the gtk main loop yet.

	* log_repaint.c: (logview_unbold_rows),
	(logview_scroll_and_focus_path), (log_repaint): When switching to
	a log with new lines, scroll down to the new lines and show them in
	bold.
	(log_repaint): Handle things better (fixes screwups when switching logs).
	(log_repaint): Fix another thinko.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_unbold_rows),